# mandarin

./: Cargo.toml
src/: app.rs  auth.rs  build.rs  errors.rs  handlers.rs  main.rs  models.rs  tests.rs
ui/: global.slint  main.slint
ui/authentication/: authorization.slint  main.slint  registration.slint
ui/mainApp/: main.slint  sideBar.slint  sideBarButton.slint
