[package]
build = "src/build.rs"
name = "diploma"
version = "0.1.0"
edition = "2024"

[dependencies]
rdev = "0.5.3"
slint = "1.11.0"
axum = { version = "0.7.5", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json", "tokio-tls"] }

[build-dependencies]
slint-build = "1.11.0"